tests/e2e/semantics/foreach_invalid7.error
Error: syntax error in story at line 3, column 15

3|    foreach 42 as elem
                    ^^^^

E0106: `foreach` requires an iterable type, but `int` is not
