tests/e2e/semantics/foreach_invalid7.story
b = 0

foreach 42 as elem
    b = b + elem
